--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
                                 <li>Copy the following to your clipboard:</li>
                                 <!--<kbd>javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</kbd><br><br>-->
                                 <span id='inline_code' class="panel panel-default">
-                                    <span id='psdle_bit' class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);</span>
+                                    <span id='psdle_bit' class="panel-body notranslate" style="word-break:break-all" translate="no">javascript:p=document,s=p.createElement('script');s.src='//repod.github.io/psdle/psdle.js';p.body.append(s)</span>
                                 </span>
-                                <li>Navigate to the online store.</li>
+                                <li>Navigate to the Library.</li>
                                 <li>Paste into your browser's address bar, removing the previous text.</li>
                                 <li>Ensure the pasted line begins with <strong class="notranslate" translate="no">javascript:</strong> If not, add it.</li>
                                 <ul><li><a href='example.jpg' target="_blank">Click here for an example.</a></li></ul>
                                 <li>Submit.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
-                            <small>If Direct does not work try other methods. Bookmarklet is the next step, followed by Userscript then extensions. Pasting the above line into your browser's console is also viable but not recommended.</small>
+                            <small>Firefox users may need to toggle browser.urlbar.filter.javascript in about:config (research first).<br>If Direct does not work try other methods. Bookmarklet is the next step, followed by Userscript then extensions. Pasting the above line into your browser's console is also viable but not recommended.</small>
                         </div>
                         <div id='method_bookmarklet' class="in">
                             <div class="label label-primary method_info">
@@ -167,8 +167,8 @@
                                 Bookmarklet: Same as Direct, but from a bookmark.
                             </div>
                             <ol>
-                                <li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:$.getScript('//repod.github.io/psdle/psdle.min.js');void(0);"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
-                                <li>Navigate to the online store.</li>
+                                <li>Bookmark this link: <a id="inline_bookmarklet" href="javascript:p=document,s=p.createElement('script');s.src='//repod.github.io/psdle/psdle.js';p.body.append(s)"><button class='btn btn-primary btn-xs'>Run PSDLE</button></a>
+                                <li>Navigate to the Library.</li>
                                 <li>Select the bookmark from your bookmarks.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
@@ -183,7 +183,7 @@
                                 <li>Install Violentmonkey</a> (<a href="https://addons.mozilla.org/en-US/firefox/addon/violentmonkey/" target="_blank"><i class="fa fa-firefox"></i> Firefox</a>, <a href="https://chrome.google.com/webstore/detail/violentmonkey/jinjaccalgkegednnccohejagnlnfdag" target="_blank"><i class="fa fa-chrome"></i> Chrome</a>), or equivalent.</li>
                                     <ul><li><small>Traditional Greasemonkey for Firefox has an <a href="https://github.com/RePod/psdle/issues/60" target="_blank">issue</a>.</small></li></ul>
                                 <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
-                                <li>Navigate to the online store.</li>
+                                <li>Navigate to the Library.</li>
                                 <li>PSDLE should activate automatically.</li>
                             </ol>
                         </div>
@@ -211,7 +211,7 @@
                         </div>
                     </div>
                     <br>
-                    After successful activation the PSDLE logo will appear in the bottom-left corner, click it to start.<br>
+                    After successful activation PSDLE should start automatically.<br>
                     <br>
                     <div style="text-align:center">
                         Like PSDLE? Please <a href="#support">support it!</a><br>
