Expose PSDLE 3 and 4 under Direct

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                                 <li>Submit.</li>
                                 <li>PSDLE should activate.</li>
                             </ol>
+                            <small>(Advanced) Through browser console: <a href="./psdle3.js">PSDLE 3 (old store)</a> and <a href="./psdle4.js">PSDLE 4 (new store)</a></small><br>
+                            <br>
                             <small>Firefox users may need to toggle browser.urlbar.filter.javascript in about:config (research first).<br>If Direct does not work try other methods. Bookmarklet is the next step, followed by Userscript then extensions. Pasting the above line into your browser's console is also viable but not recommended.</small>
                         </div>
                         <div id='method_bookmarklet' class="in">
