--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
                                 <!-- https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/ -->
                                 <li>Install Violentmonkey</a> (<a href="https://addons.mozilla.org/en-US/firefox/addon/violentmonkey/" target="_blank"><i class="fa fa-firefox"></i> Firefox</a>, <a href="https://chrome.google.com/webstore/detail/violentmonkey/jinjaccalgkegednnccohejagnlnfdag" target="_blank"><i class="fa fa-chrome"></i> Chrome</a>), or equivalent.</li>
                                     <ul><li><small>Traditional Greasemonkey for Firefox has an <a href="https://github.com/RePod/psdle/issues/60" target="_blank">issue</a>.</small></li></ul>
-                                <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
+                                <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>. </li>
+                                    <ul><li><small>Advanced: <a href="psdle.valkyrie.user.js">Valkyrie</a> (old store) / <a href="psdle.gotham.user.js">Gotham</a> (new store)</small></li></ul>
                                 <li>Navigate to the Library.</li>
                                 <li>PSDLE should activate automatically.</li>
                             </ol>
