Bring back Valkyrie privacy policy
Include information about it storing user settings and caches

--- a/index.html
+++ b/index.html
@@ -303,17 +303,17 @@
                     <h4>PSDLE:</h4>
                     PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal, however it only operates with complete user approval down to the method used and its activation.<br>
                     <br>
-                    <strong>PSDLE 4.x ("the new store")</strong>
+                    <strong>PSDLE Gotham / 4.x+ ("the new store")</strong>
                     <p>
-                    The current scope of PSDLE has been scaled back and is primarily focused on exporting.<br>
+                    The current scope of PSDLE Gotham has been scaled back and is primarily focused on exporting.<br>
                     <br>
-                    Currently PSDLE 4.x accesses the following personal information when used:
+                    Currently PSDLE accesses the following personal information when used:
                     <ul>
                         <li>Transaction history / Purchase information <small>(should reflect the Library)</small></li>
                     </ul>
                     PSDLE still requires an account be signed into to access the above information but does not need or request the account or its credentials.<br>
                     <br>
-                    Due to user feedback PSDLE 4.x now stores some information locally:
+                    Due to user feedback PSDLE Gotham now stores some information locally:
                     <ul>
                         <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">Local Storage</a> for user settings <small>(i.e. export properties)</small>
                             <ul>
@@ -340,19 +340,19 @@
                     </ul>
                     This privacy policy may change in the future.
                     </p>
-                    <!--
                     <br>
-                    <strong>PSDLE 3.x ("the old store")</strong>
+                    <strong>PSDLE Valkyrie ("the old store")</strong>
                     <br>
-                    PSDLE accesses the following information when used:
+                    PSDLE Valkyrie accesses the following information when used:
                     <ul>
                         <li>Purchase information for generating the list. <small>(PS+ status, time of purchase, etc.)</small></li>
                         <li>Console activation information. <small>(only if Queue is enabled)</small></li>
                         <li>Download Queue information. <small>(only if Queue is enabled)</small></li>
                     </ul>
-                    Information collected during use is not permanently stored. If you would like to keep a permanent list please use the "Export View" function.
+                    Similar to Gotham, some user settings may be stored in local storage and optionally cache Catalog responses in the same way and for the same reasons mentioned above. There's a menu item below the Start button to clear the Catalog cache.
                     <br>
-                    -->
+                    If you would like to keep a permanent list please use the "Export View" function.
+                    <br>
                     <br>
                     <h4>Google Analytics:</h4>
                     <p>
