--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
             </div>
         </nav>
         <div class="container">
-            <!--
             <div class="row">
                 <div class="col-md-12">
-                    <a href="https://twitter.com/RePod37/" target="_blank"><button class="btn btn-primary btn-block"><i class="fa fa-info fa-fw"></i> The site may contain outdated information about PSDLE 3.x as it is updated to reflect 4.x (for "the new store").<br>For updates, follow Twitter (click) or the GitHub repository.</button></a>
+                    <a href="https://twitter.com/RePod37/" target="_blank"><button class="btn btn-primary btn-block"><i class="fa fa-twitter fa-fw"></i> Twitter for PS3/Vita updates.</button></a>
                 </div>
-            </div>
-            -->
+            </div><br>
             <div class="row">
                 <div class="col-md-12" style='text-align:center'>
                     <noscript>JavaScript is not enabled. It's not required but recommended.<br>
