PSDLE - Popup Sans-serif
Serifless

--- a/_src/chrome/psdle/popup.html
+++ b/_src/chrome/psdle/popup.html
@@ -1,4 +1,5 @@
 <style>
+    div { font-family: sans-serif }
     a:first-of-type {
         border-top-left-radius: 12px;
         border-bottom-left-radius: 12px
@@ -9,7 +10,6 @@
     }
     a {
         font-weight: 700;
-        
         color: #fff;
         background-color: #2185f4;
         display: inline-block;
@@ -22,7 +22,7 @@
 </style>
 <div style="min-width:420px; font-size:1.25em">
 <center>
-<a href="https://library.playstation.com" target="_blank">Library (PS4/PS5)</a> <a href="https://store.playstation.com/?transactAction=viewTransactionHistory&cartAction=view" target="_blank">Transaction History</a><br>
+<a href="https://library.playstation.com" target="_blank">Library (PS4/PS5)</a><a href="https://store.playstation.com/?transactAction=viewTransactionHistory&cartAction=view" target="_blank">Transaction History</a><br>
 In most cases PSDLE should start on its own when possible.<br>
 Transaction History includes items from older systems.
 </center>
