--- a/_src/chrome/psdle/popup.html
+++ b/_src/chrome/psdle/popup.html
@@ -22,7 +22,8 @@
 </style>
 <div style="min-width:420px; font-size:1.25em">
 <center>
-<a href="https://library.playstation.com" target="_blank">Library (PS4/PS5)</a><a href="https://store.playstation.com/?transactAction=viewTransactionHistory&cartAction=view" target="_blank">Transaction History</a><br>
+<a href="https://library.playstation.com" target="_blank">Library (PS4/PS5)</a>
+<!-- <a href="https://store.playstation.com/?transactAction=viewTransactionHistory&cartAction=view" target="_blank">Transaction History</a><br>
 In most cases PSDLE should start on its own when possible.<br>
 Transaction History includes items from older systems.
 </center>
@@ -34,4 +35,5 @@ If the Transaction History button does not work:
     <li>Transaction History</li>
 </ul>
 Payment Management from the profile menu may also work.
+-->
 </div>
