--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-md-12">
                     <a href="https://twitter.com/RePod37/" target="_blank"><button class="btn btn-primary btn-block"><i class="fa fa-twitter fa-fw"></i> Twitter for PS3/Vita updates.</button></a>
                 </div>
-            </div><br>
+            </div><br>-->
             <div class="row">
                 <div class="col-md-12" style='text-align:center'>
                     <noscript>JavaScript is not enabled. It's not required but recommended.<br>
